--- a/Predcition/src/assets/styles/Login.css
+++ b/Predcition/src/assets/styles/Login.css
@@ -18,7 +18,7 @@
   
   /* Navbar */
   #navbar {
-    padding-top: 60px;
+    /* padding-top: 60px; */
     padding-left: 20px;
     font-size: 18px;
     margin-bottom: 20px;
